# PaletteSnap

./: .gitignore  README.md  pyproject.toml
palettesnap/: PaletteSnap.py  background.py  cache.py  cli.py  colorClass.py  colorOptimize.py  console.py  outdatedCheck.py  preview.py  refresh.py  setup.py  templating.py  wallpaper.py
